tests/sksl/errors/CallNonFunction.sksl
void main() {
    float x = 3;
    x();
}
